# OOPLabs

./: README.md
ObjectOrientedProgrammingLab1/: CMakeLists.txt  README.md  main.cpp
ObjectOrientedProgrammingLab1/.devcontainer/: Dockerfile  devcontainer.json
ObjectOrientedProgrammingLab1/include/: to_binary_string.h
ObjectOrientedProgrammingLab1/src/: to_binary_string.cpp
ObjectOrientedProgrammingLab1/tests/: unit_tests.cpp
ObjectOrientedProgrammingLab2/: CMakeLists.txt  main.cpp
ObjectOrientedProgrammingLab2/include/: ArrayExtended.hpp  array.hpp  twelve.hpp  twelve_digit.hpp
ObjectOrientedProgrammingLab2/src/: twelve.cpp  twelve_digit.cpp
ObjectOrientedProgrammingLab2/tests/: twelve_digit_tests.cpp  twelve_tests.cpp  unit_tests.cpp
ObjectOrientedProgrammingLab3/: main.cpp
ObjectOrientedProgrammingLab3/.devcontainer/: Dockerfile
ObjectOrientedProgrammingLab4/: CMakeLists.txt  main.cpp
ObjectOrientedProgrammingLab4/include/: array.hpp  figure.hpp  flat_vector.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  polygonal.hpp
ObjectOrientedProgrammingLab4/src/: hexagon.cpp  octagon.cpp  pentagon.cpp  polygonal.cpp
ObjectOrientedProgrammingLab4/tests/: polygonal_tests.cpp
ObjectOrientedProgrammingLab5/: CMakeLists.txt  main.cpp
ObjectOrientedProgrammingLab5/include/: list_memory_resource.hpp  pmr_queue.hpp
ObjectOrientedProgrammingLab5/tests/: pmr_queue_tests.cpp
ObjectOrientedProgrammingLab6/: log.txt
ObjectOrientedProgrammingLab6/src/: dragon.cpp  frog.cpp  knight.cpp
ObjectOrientedProgrammingLab6/tests/: tests.cpp
ObjectOrientedProgrammingLab6_1/: CMakeLists.txt  log.txt  npc.txt
ObjectOrientedProgrammingLab6_1/config/: field.json  set_env_vars.fish
ObjectOrientedProgrammingLab6_1/include/configs/: field_configs.hpp
ObjectOrientedProgrammingLab6_1/include/factories/: factories.hpp
ObjectOrientedProgrammingLab6_1/include/game/: game.hpp  world_configurator.hpp
ObjectOrientedProgrammingLab6_1/include/npcs/: frog.hpp  npc.hpp
ObjectOrientedProgrammingLab6_1/include/visitors/: attacker_visitors.hpp
ObjectOrientedProgrammingLab6_1/src/factories/: factories.cpp
ObjectOrientedProgrammingLab6_1/src/game/: fight_manager.cpp  game.cpp
ObjectOrientedProgrammingLab6_1/src/npcs/: knight.cpp  npc.cpp
ObjectOrientedProgrammingLab6_1/src/visitors/: attacker_visitors.cpp
ObjectOrientedProgrammingLab7/: CMakeLists.txt  log.txt  main.cpp
ObjectOrientedProgrammingLab7/config/: npc_properties.json  set_env_vars.fish  start_info.json
ObjectOrientedProgrammingLab7/include/: battle.hpp  config.hpp  dragon.hpp  factory.h  factory.hpp  field_config.hpp  frog.hpp  game.hpp  knight.hpp  npc.hpp  npc_properties_config.hpp  observer.hpp  utils.hpp  visitor.hpp
ObjectOrientedProgrammingLab7/include/configs/: field_configs.hpp  npc_properties_configs.hpp
ObjectOrientedProgrammingLab7/include/factories/: factories.hpp
ObjectOrientedProgrammingLab7/include/field_config/: field_config.hpp
ObjectOrientedProgrammingLab7/include/game/: fight_manager.hpp  game.hpp  game_world_manager.hpp  game_world_printer.hpp  move_manager.hpp  print_manager.hpp  world_configurator.hpp
ObjectOrientedProgrammingLab7/include/npc_properties_config/: npc_properties_config.hpp
ObjectOrientedProgrammingLab7/include/npcs/: npc.hpp  npc_types.hpp
ObjectOrientedProgrammingLab7/include/observers/: observers.hpp
ObjectOrientedProgrammingLab7/include/visitors/: attacker_visitors.hpp
ObjectOrientedProgrammingLab7/src/: dragon.cpp  frog.cpp  knight.cpp  npc.cpp  utils.cpp  visitor.cpp
ObjectOrientedProgrammingLab7/src/configs/: field_configs.cpp  npc_properties_configs.cpp
ObjectOrientedProgrammingLab7/src/factories/: factories.cpp
ObjectOrientedProgrammingLab7/src/game/: fight_manager.cpp  game.cpp  move_manager.cpp  print_manager.cpp  world_configurator.cpp
ObjectOrientedProgrammingLab7/src/npc/: frog.cpp
ObjectOrientedProgrammingLab7/src/npcs/: dragon.cpp  npc.cpp
ObjectOrientedProgrammingLab7/src/observers/: observers.cpp
ObjectOrientedProgrammingLab7/tests/: tests.cpp
